<resources>
    <string name="app_name">CereBro</string>

    <!-- Strings related to register -->
    <string name="register_prompt">Tell us about yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_email">UIC Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Register with CereBro</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is an invalid UIC email</string>
    <string name="error_invalid_password">This password is too short. Create a password with at least 7 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_match_password">This password is not matching. Please enter again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="intro_sin_sup">Please Sign up to Cerebro.  If you have an account, please sign in.</string>
    <string name="button_intro_sup">Sign Up</string>
    <string name="button_intro_sin">Sign In</string>
    <string name="sin_prompt">Sign in to your CereBro account</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutor_profile">TutorProfileActivity</string>


    <string-array name="Tutors">
        <item>Tutor1</item>
        <item>Tutor2</item>
        <item>Tutor3</item>
        <item>Tutor4</item>
        <item>Tutor5</item>
        <item>Tutor6</item>
        <item>Tutor7</item>
        <item>Tutor8</item>
        <item>Tutor9</item>
        <item>Tutor10</item>

    </string-array>
    <string name="title_activity_list_of_tutors">ListOfTutors</string>
    <string name="title_home">Distance</string>
    <string name="title_dashboard">Rating</string>
    <string name="title_notifications">Availability</string>

</resources>
